@@ -43,7 +43,7 @@ import org.junit.experimental.categories.Category;
 import org.junit.runner.RunWith;
 
 import java.net.UnknownHostException;
-import java.util.List;
+import java.util.Arrays;
 import java.util.UUID;
 
 import static junit.framework.TestCase.assertNotNull;
@@ -211,7 +211,7 @@ public class TcpClientConnectionManagerTranslateTest extends ClientTestSupport {
         @Override
         public Addresses loadAddresses(ClientConnectionProcessListenerRunner listenerRunner) {
             try {
-                return new Addresses(List.of(new Address("127.0.0.1", 5701)));
+                return new Addresses(Arrays.asList(new Address("127.0.0.1", 5701)));
             } catch (UnknownHostException e) {
                 return null;
             }
